<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <EditText
        android:id="@+id/edBuscaRota"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:hint="@string/buscaHint_buscar"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toStartOf="@+id/btBusca"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btBusca"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:text="@string/busca_button_buscar"
        app:layout_constraintBaseline_toBaselineOf="@+id/edBuscaRota"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/btCasa"
        android:layout_width="wrap_content"
        android:layout_height="47dp"
        android:layout_marginStart="100dp"
        android:layout_marginTop="20dp"
        android:text="@string/busca_button_casa"
        app:layout_constraintEnd_toStartOf="@+id/btTrabalho"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_chainStyle="spread"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edBuscaRota" />

    <Button
        android:id="@+id/btTrabalho"
        android:layout_width="wrap_content"
        android:layout_height="49dp"
        android:layout_marginEnd="100dp"
        android:layout_marginTop="20dp"
        android:text="@string/busca_button_trabalho"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/btCasa"
        app:layout_constraintTop_toBottomOf="@+id/edBuscaRota" />

    <ListView
        android:id="@+id/listBusca"
        android:layout_width="368dp"
        android:layout_height="393dp"
        android:layout_marginBottom="8dp"
        android:layout_marginStart="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


</android.support.constraint.ConstraintLayout>